--- a/ud82/index.html
+++ b/ud82/index.html
@@ -7,32 +7,59 @@
     <title>Union Delta</title>
   </head>
   <body>
-    <header>
-      <nav class="navbar">
-          <div class="container">
-              <div class="navbar__wrap">
-                  <a class="logo" href="#" rel="home">
-                      <img src="">
-                  </a>
-                  <div class="hamb">
-                      <div class="hamb__field" id="hamb">
-                          <span class="bar"></span>
-                          <span class="bar"></span>
-                          <span class="bar"></span>
+      <header>
+          <nav class="navbar pt-5 pb-6">
+              <div class="container">
+                  <div class="navbar__wrap">
+                      <a class="logo" href="#" rel="home">
+                          <img src="./src/images/logo.svg">
+                      </a>
+                      <div class="hamb">
+                          <div class="hamb__field" id="hamb">
+                              <span class="bar"></span>
+                              <span class="bar"></span>
+                              <span class="bar"></span>
+                          </div>
+                      </div>
+                      <ul class="menu rounded-3xl" id="menu">
+                          <li class="px-8 py-3"><a href="#" class="menu_active">Главная</a></li>
+                          <li class="px-8 py-3"><a href="#">Главная</a></li>
+                          <li class="px-8 py-3"><a href="#">Главная</a></li>
+                      </ul>
+                      <div class="flex">
+                          <a class="py-3 px-8 rounded-3xl text-carbonFiber text-xl font-bold bg-philippineYellow" href="tel:+7 978 100-05-48">+7 978 100-05-48</a>
                       </div>
                   </div>
-                  <ul class="menu container" id="menu">
-                      <li><a href="#" class="menu_active">Главная</a></li>
-                      <li><a href="#">Главная</a></li>
-                      <li><a href="#">Главная</a></li>
-                  </ul>
               </div>
-          </div>
-          <div class="popup" id="popup"></div>
-      </nav>
-    </header>
+              <div class="popup" id="popup"></div>
+          </nav>
+      </header>
     <main>
-      
+        <section class="mt-16 bg-center bg-cover" style="background-image: url('./src/images/hero.jpeg');">
+            <div class="container">
+                <div class="pb-20 pt-24">
+                  <div class="pb-16">
+                      <h1 class="text-white text-[80px] font-bold">UNIONDELTA82</h1>
+                  </div>
+                  <div class="pb-16">
+                      <p class="text-white text-2xl">Антигравийные, тонировочные и защитные плёнки,<br>произведённые по передовым технологиям</p>
+                  </div>
+                  <div class="pb-44">
+                      <button class="py-4 px-8 font-bold text-carbonFiber text-2xl bg-philippineYellow rounded-3xl">Записаться на консультацию</button>
+                  </div>
+                </div>
+                <div class="flex justify-end">
+                    <p class="text-philippineYellow text-2xl">#яЛюблюСвоюМашину</p>
+                </div>
+            </div>
+        </section>
+        <section class="py-28">
+            <div class="container">
+                <h2 class="text-carbonFiber text-5xl uppercase font-extrabold">преимущества</h2>
+            </div>
+
+        </section>
+
     </main>
     
     <script type="module" src="/main.js"></script>
