--- a/ud82/index.html
+++ b/ud82/index.html
@@ -284,7 +284,7 @@
                     </div>
                 </div>
                 <div class="flex justify-center">
-                    <button class="py-2 sm:py-4 px-4 sm:px-8  font-bold text-carbonFiber text-xl md:text-2xl bg-philippineYellow rounded-3xl">Записаться на консультацию</button>
+                    <button class="py-2 sm:py-4 px-4 sm:px-8  font-bold text-carbonFiber text-xl md:text-2xl bg-philippineYellow rounded-3xl hover:scale-110 duration-700">Записаться на консультацию</button>
                 </div>
             </div>
         </section>
