--- a/ud82/index.html
+++ b/ud82/index.html
@@ -126,7 +126,7 @@
                         </ul>
                     </div>
                     <div class="pb-12 xl:pb-0">
-                        <div class="grid gap-6 pb-16 xl:pb-[184px] service-wrap">
+                        <div class="grid gap-6 pb-16 xl:pb-[184px] service-wrap__left">
                             <div class="relative order-1 xl:order-none">
                                 <div>
                                     <img src="./src/images/service-1.png">
@@ -145,7 +145,7 @@
                                 <p class="text-2xl md:text-[32px] font-bold">Антигравийная защита</p>
                             </div>
                         </div>
-                        <div class="grid gap-6 pb-16 xl:pb-[184px] service-wrap">
+                        <div class="grid gap-6 pb-16 xl:pb-[184px] service-wrap__right">
                             <div class="py-8 xl:py-12">
                                 <p class="text-2xl md:text-[32px] font-bold">Тонировка</p>
                             </div>
@@ -169,7 +169,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="grid gap-6 pb-16 xl:pb-[184px] service-wrap">
+                        <div class="grid gap-6 pb-16 xl:pb-[184px] service-wrap__left">
                           <div class="relative order-1 xl:order-none">
                               <div>
                                   <img src="./src/images/service-3.png">
